--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ОЛЕСЯ</title>
+    <title>Моя перша веб-сторінка</title>
+    <meta name="description" content="міні біографія" />
+    <meta name="pic_me" content="pic_me.jpeg" />
 </head>
 <body>
  <h1>Бонжур еврібаді</h1>   
  <p>Мене звати Олеся і це сайт ебаут мі</p>
  <h2>А ось і я, на фотку можна клікнути</h2>
- <a href="https://www.instagram.com/cherepanyn/" target="_blank"> <img src="pic me.jpeg" width="30%"> </a>
+ <a href="https://www.instagram.com/cherepanyn/" target="_blank"> <img src="pic_me.jpeg" width="30%"> </a>
  <ul>
      <li>В мене скоро ювілей</li>
      <li>Я супер смішна і щаслива</li>
      <li>В мене є кішка Шанель і пахне вона не як духи</li>
  </ul>
 <h1>А ось і сама Шанель</h1>
-<img src="pic chanel.jpeg" width="30%">
+<img src="pic_chanel.jpeg" width="30%">
 <ol type="1">
     <li>ЇЇ купили на базарі за 3 грн</li>
     <li>Все вдома з приправою шерсті</li>
