--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Моя перша веб-сторінка</title>
     <meta name="description" content="міні біографія" />
-    <meta name="og:image" content="pic_me.jpeg" />
+    <meta name="og:image" content="https://cherepanynn.github.io/pic_me.jpeg" />
 </head>
 <body>
  <h1>Бонжур еврібаді</h1>   
