--- a/index.html
+++ b/index.html
@@ -4,21 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Моя перша веб-сторінка</title>
-    <meta name="description" content="міні біографія" />
-    <meta name="og:image" content="https://cherepanynn.github.io/pic_me.jpeg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>ОЛЕСЯ</title>
 </head>
 <body>
- <h1>Бонжур еврібаді</h1>   
- <p>Мене звати Олеся і це сайт ебаут мі</p>
- <h2>А ось і я, на фотку можна клікнути</h2>
+ <h1 class="header header-1">
+     БОНЖУР ЕВРІБАДІ   
+</h1>
+ <p style="font-size: 22px"> 
+    мене звати Олеся і це сайт ебаут мі
+</p>
+
+ <h2 class="header header-2">
+
+     А ось і я, на фотку можна клікнути
+ </h2>
  <a href="https://www.instagram.com/cherepanyn/" target="_blank"> <img src="pic_me.jpeg" width="30%"> </a>
  <ul>
      <li>В мене скоро ювілей</li>
      <li>Я супер смішна і щаслива</li>
      <li>В мене є кішка Шанель і пахне вона не як духи</li>
  </ul>
-<h1>А ось і сама Шанель</h1>
+<h2 class="header header-3">
+А ось і сама Шанель
+</h2>
 <img src="pic_chanel.jpeg" width="30%">
 <ol type="1">
     <li>ЇЇ купили на базарі за 3 грн</li>
